cabal-version:  3.0

name:           lockfree-array-queue
version:        0.1.0.0
synopsis:       A linerisable MPMC unbounded lockfree-queue
description:    Please see the README on GitHub at <https://github.com/tmcdonell/lockfree-array-queue#readme>
category:       Data, Concurrency
homepage:       https://github.com/tmcdonell/lockfree-array-queue#readme
bug-reports:    https://github.com/tmcdonell/lockfree-array-queue/issues
author:         Trevor L. McDonell
maintainer:     trevor.mcdonell@gmail.com
copyright:      Trevor L. McDonell <trevor.mcdonell@gmail.com>
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md
    cbits/delay.h
    cbits/sfc64.h
    cbits/delay.c
    cbits/atomic.cmm

source-repository head
  type: git
  location: https://github.com/tmcdonell/lockfree-array-queue

library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules:
          Data.Concurrent.Queue.Array.FAA

  build-depends:
          base                          >=4.7 && <5
        , ghc-prim
        , primitive

  cmm-sources:
        cbits/atomic.cmm

  ghc-options:
        -Wall
        -O3
        -optc=-O3
        -optc-Wall

  cmm-options:
        -Wall
        -O3

  cc-options:
        -Wall
        -O3

executable faa-test
  buildable: False
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
      Delay
      LCRQ
  hs-source-dirs:
      test
  ghc-options: -Wall -O3 -threaded -rtsopts -with-rtsopts=-A128M -with-rtsopts=-n4M
  cc-options: -Wall -O3 -DLCRQ
  include-dirs:
      ./
      reference/ymc-queue
  c-sources:
      cbits/delay.c
      reference/ymc-queue/lcrq.c
      reference/ymc-queue/hzdptr.c
      reference/ymc-queue/xxhash.c
  build-depends:
      base
    , clock
    , ghc-prim
    , lockfree-array-queue
    , lockfree-queue
    , primitive

